docs(gate): make the DAP and native paths tellable apart
A gate run measured the DAP path without either of us noticing. The
console showed FlixDebugAdapter, "Flix (--Xdebug attach)" and
[flix-debug-adapter] lines throughout, so FlixPositionManager was never
consulted -- but the editor looks identical either way, same red gutter and
same Debug toolwindow, and the runbook mentioned the distinction only in
passing.

Adds the console signatures of each path up front, before the
preconditions, and says plainly how to end up on the wrong one: pressing
Debug on a .flix file, or using the gutter arrow, hands the request to
whichever run-configuration producer matches, and today that is LSP4IJ's
DAP producer because the *.flix mapping is still registered. The native
path has no producer yet, so it is reachable only by creating a Remote JVM
Debug configuration by hand -- which is why the debuggee is started from a
terminal rather than from the IDE.

Row 12 also has to be checked *while suspended*. Run after the program
exits it prints 0 regardless, because the adapter is gone either way, so
the check confirmed nothing and read as evidence that it had. It now uses
`grep -c '[F]lixDebugAdapter'` at the first breakpoint, paired with the
console signature.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>